--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
 	        <artifactId>springfox-swagger2</artifactId>
 	        <version>2.9.2</version>
    		 </dependency>
+		<dependency>
+		    <groupId>org.hibernate.validator</groupId>
+		    <artifactId>hibernate-validator</artifactId>
+		    <version>6.0.10.Final</version>
+		</dependency>
 	</dependencies>
 
 	<build>
